[gd_scene load_steps=2 format=2]

[ext_resource path="res://MainInterface.gd" type="Script" id=1]

[node name="MainInterface" type="Control"]
margin_right = 720.0
margin_bottom = 464.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 923.0
margin_bottom = 578.0
color = Color( 0, 0, 0, 0.329412 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 58.0
margin_top = 38.0
margin_right = 602.0
margin_bottom = 331.0

[node name="LengthLineEdit" type="LineEdit" parent="."]
margin_left = 110.0
margin_top = 341.0
margin_right = 221.0
margin_bottom = 378.0
text = "Length"
align = 1

[node name="AmountLineEdit" type="LineEdit" parent="."]
margin_left = 513.0
margin_top = 341.0
margin_right = 643.0
margin_bottom = 378.0
text = "Amount"
align = 1

[node name="GenerateButton" type="Button" parent="."]
margin_left = 315.0
margin_top = 397.0
margin_right = 423.0
margin_bottom = 442.0
text = "Generate"

[connection signal="focus_entered" from="LengthLineEdit" to="." method="_on_LengthLineEdit_focus_entered"]
[connection signal="focus_entered" from="AmountLineEdit" to="." method="_on_AmountLineEdit_focus_entered"]
[connection signal="pressed" from="GenerateButton" to="." method="_on_GenerateButton_pressed"]
